Created endpoints for leaderboard
Made endpoints to fetch the leaderboard statistics and also setup the backend architecture for leaderboard.
